# Algoritmer-och-datastrukturer

./: CMakeLists.txt  src\Laboration2\Uppgift4\Output.txt
src/InputFiles/: a.out  inputfile10000.txt  inputfile100000.txt  labb4-2.txt  labb4-3.txt  text.txt
src/Laboration1/: Motivation.txt  README.md
src/Laboration1/Uppgift1/: a.out  task12  test.c
src/Laboration1/Uppgift2/: ReverseString.java  Stack.java
src/Laboration1/Uppgift3/: DoubleLinkedCircularList.java  DoublyLinkedCircularList.java  Main.java
src/Laboration1/Uppgift4/: CircularLinkedList.java  CircularSinglyLinkedList.java  Main.java
src/Laboration1/Uppgift5/: GeneralQueue.java  Main.java
src/Laboration1/Uppgift6/: Main.java  OQ.java  OrderedQueue.java
src/Laboration1/Uppgift7/: CheckParentheses.java  Main.java
src/Laboration1/Util/: Util.java
src/Laboration2/Uppgift1/: InsertionSort.java  a.out  uppgift1.c
src/Laboration2/Uppgift1to2/: InsertionSort.java  uppgift1.c
src/Laboration2/Uppgift3/: inPlace.c
src/Laboration2/Uppgift4/: InsertionSort.java  L2U4.java  MergeSort.java  Output2.txt  QuickSort.java  analys2.xlsx  ~$analys2.xlsx
src/Laboration2/Uppgift5/: 1M.csv  MergeBars.java  MergeSort.java  output.csv
src/Laboration2/Uppgift6/: QuickBars.java  QuickSort.java  QuickSortM3.java  QuickiSorti.java
src/Laboration3/: Untitled-1.nb
src/Laboration3/Uppgift1/: a.out  polished-gutenberg.txt
src/Laboration3/Uppgift2/: BinarySearchST.java  FrequencyCounter.java
src/Laboration3/Uppgift3/: BST.java  FreqCounterBST.java
src/Laboration4/: Graph.nb
(+16 files in other folders)
